reports/Regexes.err.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
    ~~~~~~~~~^
        nb,
        ^^^
    ...<4 lines>...
        **kwargs,
        ^^^^^^^^^
    )
    ^
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/nbclient/client.py", line 1319, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/jupyter_core/utils/__init__.py", line 165, in wrapped
    return loop.run_until_complete(inner)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/asyncio/base_events.py", line 720, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/nbclient/client.py", line 709, in async_execute
    await self.async_execute_cell(
        cell, index, execution_count=self.code_cells_executed + 1
    )
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/nbclient/client.py", line 1062, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.13.1/x64/lib/python3.13/site-packages/nbclient/client.py", line 918, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
!fandango fuzz -f infinity.fan -n 10 --validate
assert _exit_code == 0
------------------

----- stdout -----
fandango:WARNING: Could not generate a full population of unique individuals. Population size reduced to 20.
abcabcabcabcabcabcabcabcabcabcabcabcabcabcabc
abcabcabcabcabcabcabcabcabcabcabc
abcabcabcabcabcabcabcabc
abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc
abcabcabcabcabcabcabc
abcabcabcabcabc
abcabcabcabcabcabcabcabcabc
abcabcabc
abcabcabcabcabcabcabcabcabcabc
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0001.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0002.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0003.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0004.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0005.txt', line 1, column 2: mismatched input 'b'
----- stdout -----
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0006.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0007.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0008.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0009.txt', line 1, column 2: mismatched input 'b'
SyntaxError: '/tmp/tmpctvwrpjm/fandango-0010.txt', line 1, column 2: mismatched input 'b'
ValueError: 10 error(s) during validation
abcabcabcabcabcabcabcabcabcabcabcabc
------------------

[0;31m---------------------------------------------------------------------------[0m
[0;31mAssertionError[0m                            Traceback (most recent call last)
Cell [0;32mIn[2], line 2[0m
[1;32m      1[0m get_ipython()[38;5;241m.[39msystem([38;5;124m'[39m[38;5;124mfandango fuzz -f infinity.fan -n 10 --validate[39m[38;5;124m'[39m)
[0;32m----> 2[0m [38;5;28;01massert[39;00m _exit_code [38;5;241m==[39m [38;5;241m0[39m

[0;31mAssertionError[0m: 

